<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resultados"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_resultados_de_la_inversión"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/textViewPropuestaI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:textSize="18sp"
        android:text="@string/text_monto_total_de_la_propuestaI"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewPropuestaII"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:textSize="18sp"
        android:text="@string/text_monto_total_de_la_propuestaII"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_volver" />

</LinearLayout>